--- a/src/components/Dashboard/Client/Client.css
+++ b/src/components/Dashboard/Client/Client.css
@@ -90,7 +90,8 @@
   box-shadow:inset 0 0 6px rgba(0, 0, 0, 0.3) ;
 }
 
-@media screen and (max-width:600px){
+/*Media Queries*/
+@media screen and (max-width:960px){
     th{
         display:none;
     }
