--- a/src/components/Dashboard/Client/Client.css
+++ b/src/components/Dashboard/Client/Client.css
@@ -18,32 +18,33 @@
 }
 
 .client-container {
-    /* border: 1px solid gray; */
+    border: 1px solid #B5B5B5;
     width: 90%;
     /* height: 100%; */
     margin:0px auto;
-    /* border: 0.2rem solid grey; */
     box-sizing: border-box;
     box-shadow: 6px 4px 38px 4px rgba(0, 0, 0, 0.02);
     border-radius: 0.5rem;
-    padding: 1rem 0;
+    /* padding: 1rem 0; */
 }
-.client-container .header{
+.clients .header{
     /* border: 1px solid red; */
     width: 400px;
+    margin: 0 70px;
 }
-.client-container .header h2{
+.clients .header h2{
     font-size: 2.2rem;
     font-family: 'Poppins';
     padding: 10px 0;
     text-transform: uppercase;
 }
 .client-container  table{
-    /* border: 1px solid black; */
+    border: 1px solid #B5B5B5;
     width: 100%;
     border-collapse: collapse;
     box-shadow: 2px 2px 12px 4px rgba(0, 0, 0, 0.2);
     overflow: auto;
+  
   
 }
 .client-container  table tr{
@@ -51,17 +52,20 @@
     border-bottom: 0.75px solid #B5B5B5;
     color: #0F123F;
     font-size: 1em;
+    /* border-radius: 7px; */
+    
 
 }
 .client-container  table th{
     padding: 17px 0;
     border: 1px solid #ddd;
-    background: #ffc107;
+    background: #f8d25f;
     color: white;
     text-transform: capitalize;
     position: sticky;
     top: 0;
     font-weight: 400;
+    
 }
 .client-container table tr td{
     /* border: 1px solid #ddd; */
@@ -99,7 +103,7 @@
         display: block;
     }
     td:first-child{
-        background: #ffc107;
+        background: #f8d25f;
     }
 
     td:nth-child(2)::before{
