--- a/src/components/Dashboard/Product/product.css
+++ b/src/components/Dashboard/Product/product.css
@@ -9,12 +9,11 @@
 
 }
 
-.card:hover {
 
+
+.card:hover {
+    background-color: #f8d25f;
     cursor: pointer;
-}
-
-.card:hover {
     transform: scale(1.1);
     transition: transform 6s cubic-bezier(0.25, 0.45, 0.45, 0.95);
 }
